# Checkmate-Solver

./: CMakeLists.txt  Chess.cpp  Chess.h  Exception.h  Main.cpp  Makefile  README.md  Types.h  USAGE.md  build.sh  config.ini
inputs/: positions
inputs/FEN/: README.md  input_01  input_02  input_03  input_04  input_05  input_06  input_07  input_08  input_09  input_10  input_11  input_12  input_13  input_14  input_15  input_16  input_17
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  PawnBlack.cpp  PawnBlack.h  PawnWhite.cpp  PawnWhite.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
